<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tools_localization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="3d.davidecapuzzo@gmail.com">davide-work</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>can_msgs</depend>
  <depend>nlohmann_json</depend>
  <depend>rosbag2_cpp</depend>

  <!-- linear algebra (Eigen) -->
  <build_depend>eigen3_cmake_module</build_depend>
  <exec_depend>eigen</exec_depend>

  <!-- JSON (nlohmann/json) -->
  <build_depend>nlohmann-json3-dev</build_depend>
  <exec_depend>nlohmann-json3-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
